--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,16 @@
+asn1crypto==0.24.0
+certifi==2017.11.5
+cffi==1.11.2
+chardet==3.0.4
+cryptography==2.1.4
 Django==2.0
+idna==2.6
+ndg-httpsclient==0.4.3
+pusher==1.7.2
+pyasn1==0.4.2
+pycparser==2.18
+pyOpenSSL==17.5.0
 pytz==2017.3
+requests==2.18.4
+six==1.11.0
+urllib3==1.22
